test/try_fail_errors/str.yasl.err
TypeError: str.count expected arg in position 1 to be of type str, got arg of type bool. (line 1)
TypeError: str.count expected arg in position 0 to be of type str, got arg of type int. (line 2)
TypeError: str.endswith expected arg in position 0 to be of type str, got arg of type int. (line 3)
TypeError: str.endswith expected arg in position 1 to be of type str, got arg of type bool. (line 4)
TypeError: str.isal expected arg in position 0 to be of type str, got arg of type int. (line 5)
TypeError: str.isalnum expected arg in position 0 to be of type str, got arg of type int. (line 6)
TypeError: str.islower expected arg in position 0 to be of type str, got arg of type int. (line 7)
TypeError: str.isnum expected arg in position 0 to be of type str, got arg of type int. (line 8)
TypeError: str.isprint expected arg in position 0 to be of type str, got arg of type int. (line 9)
TypeError: str.isspace expected arg in position 0 to be of type str, got arg of type int. (line 10)
TypeError: str.isupper expected arg in position 0 to be of type str, got arg of type int. (line 11)
TypeError: str.ltrim expected arg in position 1 to be of type str, got arg of type bool. (line 12)
TypeError: str.ltrim expected arg in position 0 to be of type str, got arg of type int. (line 13)
TypeError: str.rep expected arg in position 1 to be of type int, got arg of type bool. (line 14)
TypeError: str.rep expected arg in position 0 to be of type str, got arg of type int. (line 15)
TypeError: str.replace expected arg in position 2 to be of type str, got arg of type float. (line 16)
TypeError: str.replace expected arg in position 1 to be of type str, got arg of type bool. (line 17)
TypeError: str.replace expected arg in position 0 to be of type str, got arg of type int. (line 18)
TypeError: str.replace expected arg in position 3 to be of type int, got arg of type bool. (line 19)
TypeError: str.rtrim expected arg in position 1 to be of type str, got arg of type bool. (line 20)
TypeError: str.rtrim expected arg in position 0 to be of type str, got arg of type int. (line 21)
TypeError: str.search expected arg in position 1 to be of type str, got arg of type bool. (line 22)
TypeError: str.search expected arg in position 0 to be of type str, got arg of type int. (line 23)
TypeError: str.search expected arg in position 2 to be of type int, got arg of type bool. (line 24)
TypeError: str.split expected arg in position 1 to be of type str, got arg of type bool. (line 25)
TypeError: str.split expected arg in position 0 to be of type str, got arg of type int. (line 26)
TypeError: str.split expected arg in position 2 to be of type int or undef, got arg of type bool. (line 27)
TypeError: str.spread expected arg in position 0 to be of type str, got arg of type int. (line 28)
TypeError: str.startswith expected arg in position 1 to be of type str, got arg of type bool. (line 29)
TypeError: str.startswith expected arg in position 0 to be of type str, got arg of type int. (line 30)
TypeError: str.tobool expected arg in position 0 to be of type str, got arg of type int. (line 31)
TypeError: str.tobyte expected arg in position 0 to be of type str, got arg of type int. (line 32)
TypeError: str.tofloat expected arg in position 0 to be of type str, got arg of type int. (line 33)
TypeError: str.toint expected arg in position 0 to be of type str, got arg of type int. (line 34)
TypeError: str.tolist expected arg in position 0 to be of type str, got arg of type int. (line 35)
TypeError: str.tolist expected arg in position 1 to be of type int, got arg of type bool. (line 36)
TypeError: str.tolower expected arg in position 0 to be of type str, got arg of type int. (line 37)
TypeError: str.tostr expected arg in position 0 to be of type str, got arg of type int. (line 38)
TypeError: str.tostr expected arg in position 1 to be of type str, got arg of type int. (line 39)
TypeError: str.toupper expected arg in position 0 to be of type str, got arg of type int. (line 40)
TypeError: str.trim expected arg in position 1 to be of type str, got arg of type bool. (line 41)
TypeError: str.trim expected arg in position 0 to be of type str, got arg of type int. (line 42)