test/try_fail_errors/str.yasl
mt.lookup('', .count)('asd', true)
mt.lookup('', .count)(1, .true)
mt.lookup('', .endswith)(1, .true)
mt.lookup('', .endswith)(.str, true)
mt.lookup('', .isal)(1)
mt.lookup('', .isalnum)(1)
mt.lookup('', .islower)(1)
mt.lookup('', .isnum)(1)
mt.lookup('', .isprint)(1)
mt.lookup('', .isspace)(1)
mt.lookup('', .isupper)(1)
mt.lookup('', .ltrim)('1', true)
mt.lookup('', .ltrim)(1, .true)
mt.lookup('', .rep)('1', true)
mt.lookup('', .rep)(1, 2)
mt.lookup('', .replace)('1', 'true', 1.0)
mt.lookup('', .replace)('1', true, .str)
mt.lookup('', .replace)(1, .true, .str)
mt.lookup('', .replace)('1', .true, .str, false)
mt.lookup('', .rtrim)('1', true)
mt.lookup('', .rtrim)(1, .true)
mt.lookup('', .search)('1', true)
mt.lookup('', .search)(1, .true)
mt.lookup('', .search)('haystack', 'needle', true)
mt.lookup('', .split)('1', true)
mt.lookup('', .split)(1, .true)
mt.lookup('', .split)('1', .true, true)
mt.lookup('', .spread)(1, true)
mt.lookup('', .startswith)('1', true)
mt.lookup('', .startswith)(1, .true)
mt.lookup('', .tobool)(1)
mt.lookup('', .tobyte)(1)
mt.lookup('', .tofloat)(1)
mt.lookup('', .toint)(1)
mt.lookup('', .tolist)(1)
mt.lookup('', .tolist)('sdas', true)
mt.lookup('', .tolower)(1)
mt.lookup('', .tostr)(1)
mt.lookup('', .tostr)('abc', 1)
mt.lookup('', .toupper)(1)
mt.lookup('', .trim)('1', true)
mt.lookup('', .trim)(1, .true)